--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <script src="pdf.vue.js"></script>
   <style>html, body {margin: 0; padding: 0;}</style>
   <div id="app">
     <vue-pdf-app style="height: 100vh;" :pdf="pdf" :config="config"></vue-pdf-app>
