--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <script src="https://unpkg.com/vue@3.0.4"></script>
   <script src="/pdf.vue.js"></script>
   <style>html, body {margin: 0; padding: 0;}</style>
   <div id="app">
