--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <script src="https://unpkg.com/vue@3.0.4"></script>
-  <script src="/pdf.vue.js"></script>
+  <script src="/pdf.vue.js" type="module"></script>
   <style>html, body {margin: 0; padding: 0;}</style>
   <div id="app">
     <vue-pdf-app style="height: 100vh;" :pdf="pdf" :config="config"></vue-pdf-app>
