--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <script src="https://unpkg.com/vue@3.0.4"></script>
+  <script src="https://unpkg.com/vue"></script>
   <script src="https://raw.githubusercontent.com/JS-Scripts/PDF.Vue.JS/main/pdf.vue.js"></script>
   <style>html, body {margin: 0; padding: 0;}</style>
   <div id="app">
