--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <div id="vue">
         <vue-pdf-app style="height: 100vh;" :pdf="pdf" :config="config"></vue-pdf-app>
     </div>
-<script type="module">
-  import Vue from 'https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.esm.browser.js'
-</script>
+<script src="https://unpkg.com/vue"></script>
 <script src="https://unpkg.com/vue-pdf-app"></script>
 <script>
     Vue.component('vue-pdf-app', window["vue-pdf-app"]);
