--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     function getPdf() {
         const pdf =
-            "base64";
+            """ + base64 + """;
 
         return base64ToArrayBuffer(pdf);
         }
