--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         var url_string = window.location.href;
         var url = new URL(url_string);
         var base64 = url.searchParams.get("base64");
+        await delay (5000);
         const pdf = base64;
 
         return base64ToArrayBuffer(pdf);
