--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         var url_string = window.location.href;
         var url = new URL(url_string);
         var base64_string = url.searchParams.get("base64");
+        alert(base64_string);
         const pdf = '"' + base64_string + '"';
 
         return base64ToArrayBuffer(pdf);
